--- a/app/src/main/res/layout/movie_poster.xml
+++ b/app/src/main/res/layout/movie_poster.xml
@@ -22,13 +22,14 @@
 
     <TextView
         android:id="@+id/nama_movie"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="4dp"
+        app:layout_constraintStart_toStartOf="@id/poster_movie"
+        app:layout_constraintEnd_toEndOf="@id/poster_movie"
         app:layout_constraintTop_toBottomOf="@id/poster_movie"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Nama Film"
+        android:text="Nama Film Nama Film Nama Film Nama Film Nama Film Nama Film"
         android:textAlignment="center"
         android:fontFamily="@font/poppins_bold"
         android:textColor="@color/white"
